fix: skill row alignment

--- a/src/styles/skills.scss
+++ b/src/styles/skills.scss
@@ -10,6 +10,7 @@
   gap: 2vw;
 
   &:nth-child(even) {
+    &,
     .skills-list,
     ul {
       flex-direction: row-reverse;
